Fix "nowrap" problem in many places
git-svn-id: svn://svn.webtrees.net/trunk@675 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/phpGedView/themes/simplyblue/style.css
+++ b/phpGedView/themes/simplyblue/style.css
@@ -150,11 +150,11 @@ table.center {
 	vertical-align: top;
 }
 
-.list_label, .list_value, .nowrap {
+.list_label, .list_value {
 	white-space: nowrap;
 }
 
-.list_label_wrap, .list_value_wrap, .wrap {
+.list_label_wrap, .list_value_wrap {
 	white-space: normal;
 }
 
@@ -1212,4 +1212,15 @@ h4 {
 	left: -10px; 
 	top: -60px; 
 	z-index: 1;
+}
+
+/* Because the CSS file is only read once, the following two overriding classes MUST
+   appear at the end of the entire CSS file.
+*/
+.nowrap {
+	white-space: nowrap;
+}
+
+.wrap {
+	white-space: normal;
 }
